<resources>
    <string name="app_name">My Checkins</string>
    <string name="checkin_title_hint">ABC Event</string>
    <string name="checkin_title_label">Title</string>
    <string name="checkin_place_label">Place</string>
    <string name="checkin_details_label">Details</string>
    <string name="saved_location_label">Saved Location</string>
    <string name="date_picker_title">Checkin Date:</string>
    <string name="new_checkin">New Checkin</string>
    <string name="show_help">Help!</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d checkin</string>
    <string name="show_location">Show Map</string>
    <string name="checkin_record_text">Share</string>
    <string name="crime_report">%1$s!
The crime was discovered on %2$s. %3$s, and %4$s
</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
